load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["http.go"],
    importpath = "github.com/yext/cloudprober/servers/http",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//probes/probeutils:go_default_library",
        "//servers/http/proto:go_default_library",
        "//sysvars:go_default_library",
        "//targets/lameduck:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["http_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//targets/lameduck:go_default_library",
    ],
)
