load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["udp.go"],
    importpath = "github.com/yext/cloudprober/servers/udp",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//servers/udp/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["udp_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//logger:go_default_library",
        "//servers/udp/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
