load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["file.go"],
    importpath = "github.com/yext/cloudprober/surfacers/file",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//surfacers/file/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["file_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//surfacers/file/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_kylelemons_godebug//pretty:go_default_library",
    ],
)
