load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["postgres.go"],
    importpath = "github.com/yext/cloudprober/surfacers/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//surfacers/postgres/proto:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["postgres_test.go"],
    embed = [":go_default_library"],
    deps = ["//metrics:go_default_library"],
)
