load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_surfacer_proto",
    srcs = ["config.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//surfacers/file/proto:proto_proto",
        "//surfacers/postgres/proto:proto_proto",
        "//surfacers/prometheus/proto:proto_proto",
        "//surfacers/stackdriver/proto:proto_proto",
    ],
)

go_proto_library(
    name = "cloudprober_surfacer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/surfacers/proto",
    proto = ":cloudprober_surfacer_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//surfacers/file/proto:go_default_library",
        "//surfacers/postgres/proto:go_default_library",
        "//surfacers/prometheus/proto:go_default_library",
        "//surfacers/stackdriver/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":cloudprober_surfacer_go_proto"],
    importpath = "github.com/yext/cloudprober/surfacers/proto",
    visibility = ["//visibility:public"],
)
