load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_surfacer_proto",
    srcs = ["config.proto"],
    import_prefix = "github.com/yext/cloudprober",
    strip_import_prefix = "/",
    visibility = ["//visibility:public"],
    deps = [
        "//surfacers/file/proto:cloudprober_surfacer_file_proto",
        "//surfacers/postgres/proto:cloudprober_surfacer_postgres_proto",
        "//surfacers/prometheus/proto:cloudprober_surfacer_prometheus_proto",
        "//surfacers/stackdriver/proto:cloudprober_surfacer_stackdriver_proto",
    ],
)

go_proto_library(
    name = "cloudprober_surfacer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/surfacers/proto",
    proto = ":cloudprober_surfacer_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//surfacers/file/proto:go_default_library",
        "//surfacers/postgres/proto:go_default_library",
        "//surfacers/prometheus/proto:go_default_library",
        "//surfacers/stackdriver/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["config.pb.go"],
    importpath = "github.com/yext/cloudprober/surfacers/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//surfacers/file/proto:go_default_library",
        "//surfacers/postgres/proto:go_default_library",
        "//surfacers/prometheus/proto:go_default_library",
        "//surfacers/stackdriver/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
